--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "npm run prepare; NODE_ENV=test mocha --require @babel/register",
-    "prepare": "npx babel src --out-dir lib"
+    "prepare": "npx babel src --out-dir lib",
+    "initdb": "ymir initdb test/database/config.json"
   },
   "repository": {
     "type": "git",
