set pg.default.parseInt8 = true

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "chaos model, use to generate models",
   "main": "lib/index.js",
   "scripts": {
-    "test": "npm run prepare; NODE_ENV=test mocha --require @babel/register",
+    "test": "npm run prepare; npm run initdb; NODE_ENV=test mocha --require @babel/register",
     "prepare": "npx babel src --out-dir lib",
     "initdb": "ymir initdb test/database/config.json"
   },
