fix bigint to string issue

--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "chaos model, use to generate models",
   "main": "lib/index.js",
   "scripts": {
-    "test": "npm run prepare; NODE_ENV=test mocha --require @babel/register",
-    "prepare": "npx babel src --out-dir lib",
-    "initdb": "ymir initdb test/database/config.json"
+    "test": "npm run prepare; ymir initdb test/database/config.json; NODE_ENV=test mocha --require @babel/register",
+    "prepare": "npx babel src --out-dir lib"
   },
   "repository": {
     "type": "git",
