--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/polyfill": "^7.2.5",
     "@sqorn/pg": "0.0.45",
     "babel-loader": "^8.0.5",
+    "chaos-library": "0.0.3",
     "joi": "^14.3.1",
     "lodash": "^4.17.11",
     "log4js": "^4.0.2",
